force-app/main/default/objects/sugati__Additional_Cost__c/sugati__Additional_Cost__c.object-meta.xml
<CustomObject>
    <label>Additional Cost</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Additional Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>