force-app/main/default/objects/sugati__Additional_Cost__c/fields/sugati__S_AC_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AC_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>