force-app/main/default/objects/sugati__Additional_Cost__c/fields/sugati__S_AC_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AC_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Additional Costs</relationshipLabel>
    <relationshipName>Additional_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>