force-app/main/default/objects/sugati__Additional_Cost__c/fields/sugati__S_AC_Cost_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AC_Cost_Item__c</fullName>
    <label>Cost Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>