force-app/main/default/objects/sugati__Additional_Cost__c/fields/sugati__S_AC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AC_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Additional Costs</relationshipLabel>
    <relationshipName>Additional_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>