force-app/main/default/objects/sugati__Additional_Cost__c/fields/sugati__S_AC_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AC_Percent__c</fullName>
    <label>Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>